syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.sourceflow.gradient.project.services";

package org.sourceflow.gradient.services;

import "org/sourceflow/gradient/entities/project.proto";


service ProjectService {
  rpc RegisterProject (org.sourceflow.gradient.entities.ProjectMessage) returns (org.sourceflow.gradient.entities.ProjectMessage);
}
