syntax = "proto3";

package org.sourceflow.gradient.project;

import "common_entity.proto";

message ProjectMessage {
    org.sourceflow.gradient.common.UUID request_id = 1;
    oneof payload {
        org.sourceflow.gradient.common.CanonicalName name = 2;
        org.sourceflow.gradient.common.ProjectContext context = 3;
    }
}

